ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.7.5
    • Affects Version/s: 1.7.4
    • Component/s: None
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Let me know if you want me to investigate...

      <http://buildbot.mongodb.org/builders/Linux%2032-bit/builds/2605/steps/test_5/logs/stdio>

      Mon Jan 3 16:36:18 [conn3] getmore local.oplog.$main cid:1172252514751192584 getMore: { ts:

      { $gte: new Date(5558076263895138309) }

      } bytes:20 nreturned:0 3566ms
      Mon Jan 3 16:36:20 Got signal: 11 (Segmentation fault).

      Mon Jan 3 16:36:20 Backtrace:
      0x8510852 0xbe1420 0x2dd4bc 0x83b63ac 0x83adfe7 0x83b10bf 0x8513c04 0x81f4f58 0x852826d 0xefe542 0x340b6e
      /mnt/slaves/Linux_32bit/mongo/mongod(_ZN5mongo10abruptQuitEi+0x3c2) [0x8510852]
      [0xbe1420]
      /lib/i686/nosegneg/libc.so.6(memcpy+0x1c) [0x2dd4bc]
      /mnt/slaves/Linux_32bit/mongo/mongod(_ZN5mongo5CurOp10infoNoauthEv+0x5ec) [0x83b63ac]
      /mnt/slaves/Linux_32bit/mongo/mongod(_ZN5mongo9inProgCmdERNS_7MessageERNS_10DbResponseE+0x367) [0x83adfe7]
      /mnt/slaves/Linux_32bit/mongo/mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_8SockAddrE+0x17af) [0x83b10bf]
      /mnt/slaves/Linux_32bit/mongo/mongod(_ZN5mongo10connThreadEPNS_13MessagingPortE+0x214) [0x8513c04]
      /mnt/slaves/Linux_32bit/mongo/mongod(_ZN5boost6detail11thread_dataINS_3_bi6bind_tIvPFvPN5mongo13MessagingPortEENS2_5list1INS2_5valueIS6_EEEEEEE3runEv+0x18) [0x81f4f58]
      /mnt/slaves/Linux_32bit/mongo/mongod(thread_proxy+0x7d) [0x852826d]
      /lib/i686/nosegneg/libpthread.so.0 [0xefe542]
      /lib/i686/nosegneg/libc.so.6(clone+0x5e) [0x340b6e]

            Assignee:
            Aaron Staple (Inactive)
            Reporter:
            Aaron Staple (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: