SERVER-2323 make CachedBSONObj::reset() thread safe